tests/sksl/errors/BitShiftFloatVector.dsl.glsl
### Compilation failed:

error: type mismatch: '>>=' cannot operate on 'float2', 'int'

error: type mismatch: '<<=' cannot operate on 'float2', 'int'

error: type mismatch: '&=' cannot operate on 'float2', 'int'

error: type mismatch: '|=' cannot operate on 'float2', 'int'

error: type mismatch: '^=' cannot operate on 'float2', 'int'

error: type mismatch: '>>' cannot operate on 'float2', 'int'

error: type mismatch: '<<' cannot operate on 'float2', 'int'

error: type mismatch: '&' cannot operate on 'float2', 'int'

error: type mismatch: '|' cannot operate on 'float2', 'int'

error: type mismatch: '^' cannot operate on 'float2', 'int'

10 errors
